main column, and sidebar, and WTF Wordpressgit add -A#@

--- a/_assets/sass/structure/_basic-structure.scss
+++ b/_assets/sass/structure/_basic-structure.scss
@@ -1,1 +1,16 @@
+div.content,
+.site-footer {
+  padding-left: $main-gutter;
+  padding-right: $main-gutter;
+  @include outer-container;
 
+}
+
+.site-main,
+.widget-area {
+  @include span-columns(12);
+}
+
+div.entry-content {
+  width: 100% !important; // override for calendar plugin.
+}
