porting work from another repo. Finished work on main navigation skeleton

--- a/_assets/sass/base/_variables.scss
+++ b/_assets/sass/base/_variables.scss
@@ -73,6 +73,9 @@ $mh_med_padding-bottom: pem(4);
 // NAV vars:
 $nav-off-canvas-width: 87%;
 $nav-height-mobile: pem( 60 );
-$nav-height-medium: pem( 75 );
+$nav-height-medium: pem( 120 );
 
-$main_logo_width: pem(115);
+$nav-height-main-medium: pem(70);
+$nav-height-sub-medium: pem(50);
+
+$main_logo_width: pem(120);
