small adjustment to basic stuff

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
-Theme Name: W.F.C.A.
-Theme URI: http://designbymodus.com/
+Theme Name: WP Starter theme
+Theme URI: http://alexkademan.site/
 Author: Alex Kademan
-Author URI: http://designbymodus.com/
-Description: WP theme for Madison Wisconsin area WFCA website.
+Author URI: http://alexkademan.site/
+Description: Basic starter theme for me, Alex Kademan.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: WFCA
+Text Domain:
 Tags:
 
-Wisconsin Finishing Contractor's Association.
+Basic starter theme for me, Alex Kademan.
 */
 @import 'css/main.css';
